force-app/main/default/objects/Webtext_Parameters_Configuration__c/Webtext_Parameters_Configuration__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Webtext Parameters Configuration</label>
</CustomObject>