force-app/main/default/objects/Webtext_Parameters_Configuration__c/fields/Environment__c.field-meta.xml
<CustomField>
    <fullName>Environment__c</fullName>
    <description>API Name of the Named credential for this environment. Options are: Webtext_Dev, Webtext_QA or Webtext_Production</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Environment</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>