force-app/main/default/objects/Webtext_Parameters_Configuration__c/fields/Service_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Service_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Service Enabled</label>
    <type>Checkbox</type>
</CustomField>