force-app/main/default/objects/Webtext_Parameters_Configuration__c/fields/Short_Code__c.field-meta.xml
<CustomField>
    <fullName>Short_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Short Code</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>